# CAN_Frame_Retransmision_Tool

./: .gitignore  README.md  can-id-reframe.spec  can-retransmit.spec  can_id_reframe_cli.py  pyproject.toml  setup.py
.github/prompts/: ProjectInit.prompt.md
.github/workflows/: bump-version.yml  release-auto.yml  test-and-deploy.yml
core/: can_logic.py  frame_logger.py  gui.py  gui.ui  logger_setup.py  main.py  settings_dialog.py  settings_dialog.ui  utils.py  version.py
hooks/: create_git_tag_from_changelog.py  update_version_from_changelog.py
resources/: Avril_Inverter_Test1.csv  CAN_Frame_Retransmision_Tool.toml  CAN_IDs_AVRIL_Inverter.csv  Controller_CAN_Database_V2.dbc  Controller_CAN_Database_V2_inverterA.dbc
resources/.codeviz/: app-diagram.drawio
resources/docs/: AUTOMATED_TAGGING.md  CHANGELOG.md  report.json  srs.md  srvp.md  srvp_TR.md  srvp_test.md
scripts/: build.ps1  build.sh  test.ps1  test.sh  update_srvp.py
tests/: conftest.py  test_can_logic.py  test_can_worker.py  test_gui_logic.py  test_logging.py  test_main.py  test_utils.py  test_utils_extended.py  test_version.py
