[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# Renamed from CAN_Frame_Retransmision_Tool at v0.2.0
[project]
name = "CAN_ID_Reframe"
# Using dynamic version loaded from version file for single source of truth
dynamic = ["version"]
description = "CAN ID Reframe Tool (formerly CAN Frame Retransmission Tool)"
readme = "README.md"
license = "MIT"
authors = [ { name = "Your Name", email = "you@example.com" } ]
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.7.0",
  "python-can>=4.3.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "ruff",
  "pyinstaller"
]

[project.scripts]
can-id-reframe = "core.main:main"

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests", "resources", "scripts", "hooks"] } }
include-package-data = true

[tool.setuptools.package-data]
core = ["*.ui"]

[tool.setuptools.dynamic]
version = { file = "core/version_info.txt" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
